--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/modal-video@2.4.8/css/modal-video.min.css" /> 
   <script type="text/javascript" src="//typesquare.com/3/tsst/script/ja/typesquare.js?66908dd3fea44272975051d7ac1e02e5" charset="utf-8"></script>
-  <script type="module" crossorigin src="./assets/top.js"></script>
+  <script type="module" src="./assets/top.js"></script>
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="stylesheet" crossorigin href="./assets/css/index.css">
+  <link rel="stylesheet"  href="./assets/css/index.css">
   <link rel="stylesheet" href="./assets/css/add.css">
   <link rel="start" href="https://corp.opro.net/">
 <link href="./assets/img/favicon.ico" rel="shortcut icon">
