--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <header class="l-head" id="header">
   <div class="l-head__wrap">
     <p class="l-head__logo">
-      <a href="/" class="l-head__logo-link"><img src="/assets/img/common/icn_logo.svg" alt="株式会社オプロ" width="87" height="50"></a>
+      <a href="/" class="l-head__logo-link"><img src="./assets/img/common/logo.avif" alt="株式会社オプロ" width="87" height="50"></a>
     </p>
     <button type="button" id="hamburger" class="l-head__hamburger" aria-controls="gnav" aria-expanded="false"><span><span class="u-hide">MENU</span></span></button>
     <nav class="l-gnav" id="gnav" aria-hidden="true">
@@ -155,7 +155,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <source src="./images/web1_sp_sorce-w750.webm" type="video/webm">
             </video>              
           </div>
-          <section class="l-topFv">
+          <section class="l-topFv main-bg">
             <div class="topFv">
               <div class="topFv__inner">
                 <div class="topFv__container">
@@ -509,7 +509,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <footer class="l-foot" id="footer">
   <div class="l-foot__wrap">
     <p class="l-foot__logo">
-      <a href="/"><img src="/assets/img/common/icn_logo.svg" alt="株式会社オプロ" width="87" height="50" loading="lazy"></a>
+      <a href="/"><img src="./assets/img/common/logo.avif" alt="株式会社オプロ" width="87" height="50" loading="lazy"></a>
     </p>
     <nav class="l-foot__nav">
       <div class="l-foot__nav-group">
@@ -560,7 +560,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </nav>
   </div>
-  <p class="l-foot__copyright">&copy; 2024 OPRO Co., Ltd.</p>
+  <p class="l-foot__copyright">&copy; Copyright 2025 © Kewel Corporation. All rights reserved.</p>
 </footer>
       </div>
     </div>
