--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <h1 class="topFv__title topFv__title01 onlySp" id="js-topFvTitleSp01"></h1>
                   <h1 class="topFv__title topFv__title02 onlySp" id="js-topFvTitleSp02"></h1>
                   <div class="topFv__copy" id="js-topFvText">
-                    <span class="topFv__copyInner">オプロは帳票を主体とした</span><span class="topFv__copyInner">あらゆる分野で業務の流れを変革する会社です。</span>
+                    <span class="topFv__copyInner">Think Different & Cool.</span><span class="topFv__copyInner">Kewel Corporation is a technology company that contributes to solving social issues with the power of advanced AI technology. We provide one-stop solutions in the IT, telecommunications, semiconductors and healthcare segments for a better world.</span>
                   </div>
                 </div>
                 <div class="topFv__scrollDown">
