--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="topFv">
               <div class="topFv__inner">
                 <div class="topFv__container">
-                  <h1 class="topFv__title onlyPc" id="js-topFvTitlePc"></h1>
+                  <h1 class="topFv__title onlyPc main-logo-bg" id="js-topFvTitlePc"></h1>
                   <h1 class="topFv__title topFv__title01 onlySp" id="js-topFvTitleSp01"></h1>
                   <h1 class="topFv__title topFv__title02 onlySp" id="js-topFvTitleSp02"></h1>
                   <div class="topFv__copy" id="js-topFvText">
