--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ja" itemscope itemtype="http://schema.org/Blog">
 <head>
   <meta charset="UTF-8">
-  <title>株式会社オプロ</title>
+  <title>Kerwel Corporation</title>
   <meta name="description" content="オプロは帳票を主体としたあらゆる分野で業務の流れを変革する会社です。">
 
 <!-- HTMLヘッダー -->
@@ -55,7 +55,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </PageMap>
   -->
   <link itemprop="url" href="https://corp.opro.net/">
-  <link href="/assets/img/favicon.ico" rel="shortcut icon">
+  <link href="./assets/img/common/logo.avif" rel="shortcut icon avif">
 </head>
 <body>
   <header class="l-head" id="header">
@@ -204,7 +204,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <span class="js-topHeadingInner">それは、</span><span class="js-topHeadingInner">未来を</span><span class="js-topHeadingInner">⼤きく変える</span><br><span class="js-topHeadingInner">イノベーションの</span><span class="js-topHeadingInner">キーに</span><span class="js-topHeadingInner">なる。</span>
                 </h2>
                 <h2 class="topAbout__heading js-topHeading onlySp">
-                  <span class="js-topHeadingInner">それは、</span><span class="js-topHeadingInner">未来を</span><span class="js-topHeadingInner">⼤きく</span><br><span class="js-topHeadingInner">変える</span><span class="js-topHeadingInner">イノベーションの</span><br><span class="js-topHeadingInner">キーになる。</span>
+                  <span class="js-topHeadingInner font-upper">we believe technology should serve humanity—and we are committed to creating solutions that are not only intelligent but also practical, ethical, and impactful in real clinical settings.</span>
                 </h2>
                 <div class="topAbout__buttonarea">
                   <a href="/about/" class="top__button">
