--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="topProducts__inner js-colorBlack">
                 <div class="topProducts__imgList js-topProduct">
                   <div class="topProducts__solutionImg" id="solutionImg01">
-                      <img data-src="./images/solutionImg_01pc.svg" width="680" height="587" alt="" class="lazyload js-topProductImg topProducts__solutionImg__top isActive onlyPc">
-                      <img data-src="./images/solutionImg_sp.svg" width="312" height="257" alt="" class="lazyload onlySp">
-                      <img data-src="./images/solutionImg_02pc.svg" width="680" height="587" alt="" class="lazyload topProducts__solutionImg__top js-topProductImg onlyPc">
-                      <img data-src="./images/solutionImg_bottom.svg" width="680" height="587" alt="" class="lazyload topProducts__solutionImg__bottom onlyPc">
+                      <img data-src="./assets/common/1 (1).png" width="680" height="587" alt="" class="lazyload js-topProductImg topProducts__solutionImg__top isActive onlyPc">
+                      <img data-src="./assets/common/1 (2).png" width="312" height="257" alt="" class="lazyload onlySp">
+                      <img data-src="./assets/common/1 (3).png" width="680" height="587" alt="" class="lazyload topProducts__solutionImg__top js-topProductImg onlyPc">
+                      <img data-src="./assets/common/1 (4).png" width="680" height="587" alt="" class="lazyload topProducts__solutionImg__bottom onlyPc">
                     </div>
                 </div>
                 <div class="topProducts__contents js-topProductTextarea">
