--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <section class="l-topFv main-bg">
             <div class="topFv">
               <div class="topFv__inner">
+                <div class="main-logo-bg"></div>
                 <div class="topFv__container">
-                  <h1 class="topFv__title onlyPc main-logo-bg" id="js-topFvTitlePc"></h1>
+                  <h1 class="topFv__title onlyPc" id="js-topFvTitlePc"></h1>
                   <h1 class="topFv__title topFv__title01 onlySp" id="js-topFvTitleSp01"></h1>
                   <h1 class="topFv__title topFv__title02 onlySp" id="js-topFvTitleSp02"></h1>
                   <div class="topFv__copy" id="js-topFvText">
@@ -201,14 +202,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <span class="topAbout__tagInner">私たちについて</span>
                 </div>
                 <h2 class="topAbout__heading js-topHeading onlyPc">
-                  <span class="js-topHeadingInner">それは、</span><span class="js-topHeadingInner">未来を</span><span class="js-topHeadingInner">⼤きく変える</span><br><span class="js-topHeadingInner">イノベーションの</span><span class="js-topHeadingInner">キーに</span><span class="js-topHeadingInner">なる。</span>
+                  <span class="js-topHeadingInner">Company Overview</span>
                 </h2>
                 <h2 class="topAbout__heading js-topHeading onlySp">
                   <span class="js-topHeadingInner font-upper">we believe technology should serve humanity—and we are committed to creating solutions that are not only intelligent but also practical, ethical, and impactful in real clinical settings.</span>
                 </h2>
                 <div class="topAbout__buttonarea">
                   <a href="/about/" class="top__button">
-                    私たちについてを見る
+                    COMPANY OVERVIEW
                     <span>
                       <svg xmlns="http://www.w3.org/2000/svg" width="34" height="37" viewBox="0 0 34 37" fill="none">
                         <circle cx="17" cy="18" r="16.5" stroke="#B8CADE"/>
@@ -237,6 +238,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="topAbout__text01 js-topAbout__text"><img data-src="./images/topAbout_text01.svg" class="lazyload" width="191" height="49" alt=""></div>
                   <div class="topAbout__text02 js-topAbout__text"><img data-src="./images/topAbout_text02.svg" class="lazyload" width="237" height="49" alt=""></div>
                   <div class="topAbout__text03 js-topAbout__text">
+                    <p>Company Name</p>
+                    <p>Kewel Corporation</p>
                     <img data-src="./images/topAbout_text03.svg" width="384" height="49" alt="" class="lazyload onlyPc">
                     <img data-src="./images/topAbout_text03_sp.svg" width="145" height="35" alt="" class="lazyload onlySp">
                   </div>
@@ -296,10 +299,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="topProducts__inner js-colorBlack">
                 <div class="topProducts__imgList js-topProduct">
                   <div class="topProducts__solutionImg" id="solutionImg01">
-                      <img data-src="./assets/common/1 (1).png" width="680" height="587" alt="" class="lazyload js-topProductImg topProducts__solutionImg__top isActive onlyPc">
-                      <img data-src="./assets/common/1 (2).png" width="312" height="257" alt="" class="lazyload onlySp">
-                      <img data-src="./assets/common/1 (3).png" width="680" height="587" alt="" class="lazyload topProducts__solutionImg__top js-topProductImg onlyPc">
-                      <img data-src="./assets/common/1 (4).png" width="680" height="587" alt="" class="lazyload topProducts__solutionImg__bottom onlyPc">
+                      <img data-src="./assets/img/common/1 (1).png" width="680" height="587" alt="" class="lazyload js-topProductImg topProducts__solutionImg__top isActive onlyPc">
+                      <img data-src="./assets/img/common/1 (2).png" width="312" height="257" alt="" class="lazyload onlySp">
+                      <img data-src="./assets/img/common/1 (3).png" width="680" height="587" alt="" class="lazyload topProducts__solutionImg__top js-topProductImg onlyPc">
+                      <img data-src="./assets/img/common/1 (4).png" width="680" height="587" alt="" class="lazyload topProducts__solutionImg__bottom onlyPc">
                     </div>
                 </div>
                 <div class="topProducts__contents js-topProductTextarea">
@@ -513,7 +516,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </p>
     <nav class="l-foot__nav">
       <div class="l-foot__nav-group">
-        <a href="/about/" class="l-foot__nav-h pc">会社情報</a>
+        <a href="/about/" class="l-foot__nav-h pc">HOME</a>
         <button type="button" class="l-foot__nav-h sp js-subnav-open">会社情報</button>
         <div class="l-foot__nav-box">
           <a href="/about/" class="l-foot__nav-link sp">会社情報 TOP</a>
@@ -523,7 +526,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
       </div>
       <div class="l-foot__nav-group">
-        <a href="/business/" class="l-foot__nav-h pc">事業内容</a>
+        <a href="/business/" class="l-foot__nav-h pc">DASHBOARD</a>
         <button type="button" class="l-foot__nav-h sp js-subnav-open">事業内容</button>
         <div class="l-foot__nav-box">
           <a href="/business/" class="l-foot__nav-link sp">事業内容 TOP</a>
@@ -544,8 +547,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <a href="https://www.opro.net/partnership/" class="l-foot__nav-h">パートナー</a>
         <a href="https://spc.opro.net/hc/ja" target="_blank" class="l-foot__nav-h">サポート</a>
         <a href="https://event.opro.net/" target="_blank" class="l-foot__nav-h">イベント＆セミナー</a>
-        <a href="/ir/" class="l-foot__nav-h">IR情報</a>
-        <a href="https://www.opro.net/recruit/" target="_blank" class="l-foot__nav-h">採用情報</a>
+        <a href="/ir/" class="l-foot__nav-h">ABOUT US</a>
+        <a href="https://www.opro.net/recruit/" target="_blank" class="l-foot__nav-h">CONTACT</a>
         <a href="/contact/" class="l-foot__nav-h">お問い合わせ</a>
       </div>
       <div class="l-foot__nav-group">
