--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="l-gnav__wrap">
         <ul class="l-gnav__list">
           <li class="l-gnav__item">
-            <a href="/about/" class="l-gnav__link" data-device="pc">会社情報</a>
-            <button type="button" class="l-gnav__link js-subnav-open" aria-controls="gnav-sub-1" aria-expanded="false" data-device="sp">会社情報</button>
+            <a href="/about/" class="l-gnav__link" data-device="pc">HOME</a>
+            <button type="button" class="l-gnav__link js-subnav-open" aria-controls="gnav-sub-1" aria-expanded="false" data-device="sp">HOME</button>
             <div class="l-gnav__sub" id="gnav-sub-1" aria-hidden="true">
               <a href="/about/" class="l-gnav__sub-link" data-device="sp">会社情報 TOP</a>
               <a href="/about/philosophy/" class="l-gnav__sub-link">経営理念</a>
@@ -78,7 +78,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
           </li>
           <li class="l-gnav__item">
-            <a href="/business/" class="l-gnav__link">事業内容</a>
+            <a href="/business/" class="l-gnav__link">DASHBOARD</a>
           </li>
           <li class="l-gnav__item">
             <a href="/news/" class="l-gnav__link">ニュース</a>
@@ -93,8 +93,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <a href="https://event.opro.net/" target="_blank" class="l-gnav__link">イベント＆セミナー</a>
           </li>
           <li class="l-gnav__item">
-            <a href="/ir/" class="l-gnav__link" data-device="pc">IR情報</a>
-            <button type="button" class="l-gnav__link js-subnav-open" aria-controls="gnav-sub-4" aria-expanded="false" data-device="sp">IR情報</button>
+            <a href="/ir/" class="l-gnav__link" data-device="pc">ABOUT US</a>
+            <button type="button" class="l-gnav__link js-subnav-open" aria-controls="gnav-sub-4" aria-expanded="false" data-device="sp">ABOUT US</button>
             <div class="l-gnav__sub" id="gnav-sub-2" aria-hidden="true">
               <a href="/ir/" class="l-gnav__sub-link" data-device="sp">IR情報 TOP</a>
               <div class="l-gnav__sub-box">
@@ -132,7 +132,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
           </li>
           <li class="l-gnav__item">
-            <a href="https://www.opro.net/recruit/" target="_blank" class="l-gnav__link">採用情報</a>
+            <a href="https://www.opro.net/recruit/" target="_blank" class="l-gnav__link">CONTACT</a>
           </li>
           <li class="l-gnav__item">
             <a href="/contact/" class="l-gnav__contact-btn">お問い合わせ</a>
@@ -234,28 +234,26 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="topAbout__inner">
                 <div class="topAbout__item01" id="js-about01"></div>
                 <div class="topAbout__textBox">
-                  <div class="topAbout__text01 js-topAbout__text"><img data-src="./images/topAbout_text01.svg" class="lazyload" width="191" height="49" alt=""></div>
-                  <div class="topAbout__text02 js-topAbout__text"><img data-src="./images/topAbout_text02.svg" class="lazyload" width="237" height="49" alt=""></div>
+                  <div class="topAbout__text01 js-topAbout__text"><img data-src="./assets/img/common/overview1.png" class="lazyload" width="191" height="49" alt=""></div>
+                  <div class="topAbout__text02 js-topAbout__text"><img data-src="./assets/img/common/overview2.png" class="lazyload" width="237" height="49" alt=""></div>
                   <div class="topAbout__text03 js-topAbout__text">
-                    <p>Company Name</p>
-                    <p>Kewel Corporation</p>
                     <img data-src="./images/topAbout_text03.svg" width="384" height="49" alt="" class="lazyload onlyPc">
                     <img data-src="./images/topAbout_text03_sp.svg" width="145" height="35" alt="" class="lazyload onlySp">
                   </div>
                   <div class="topAbout__text04 js-topAbout__text">
-                    <img data-src="./images/topAbout_text04.svg" width="346" height="49" alt="" class="lazyload onlyPc">
-                    <img data-src="./images/topAbout_text04_sp.svg" width="161" height="35" alt="" class="lazyload onlySp">
+                    <img data-src="./assets/img/common/overview3.png" width="346" height="49" alt="" class="lazyload onlyPc">
+                    <img data-src="./assets/img/common/overview3.png" width="161" height="35" alt="" class="lazyload onlySp">
                   </div>
                   <div class="topAbout__text05 js-topAbout__text">
-                    <img data-src="./images/topAbout_text05.svg" width="218" height="49" alt="" class="lazyload onlyPc">
-                    <img data-src="./images/topAbout_text05_sp.svg" width="259" height="35" alt="" class="lazyload onlySp">
+                    <img data-src="./assets/img/common/overview5.png" width="218" height="49" alt="" class="lazyload onlyPc">
+                    <img data-src="./assets/img/common/overview5.png" width="259" height="35" alt="" class="lazyload onlySp">
                   </div>
                   <div class="topAbout__text06 js-topAbout__text">
-                    <img data-src="./images/topAbout_text06.svg" width="279" height="49" alt="" class="lazyload onlyPc">
-                    <img data-src="./images/topAbout_text06_sp.svg" width="157" height="35" alt="" class="lazyload onlySp">
+                    <img data-src="./assets/img/common/overview4.png" width="279" height="49" alt="" class="lazyload onlyPc">
+                    <img data-src="./assets/img/common/overview4.png" width="157" height="35" alt="" class="lazyload onlySp">
                   </div>
                   <div class="topAbout__text07 onlySp js-topAbout__text">
-                    <img data-src="./images/topAbout_text07_sp.svg" width="202" height="35" alt="" class="lazyload">
+                    <img data-src="./assets/img/common/overview1.png" width="202" height="35" alt="" class="lazyload">
                   </div>
                 </div>
                 <div class="topAbout__item02" id="js-about02">
@@ -269,10 +267,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="topProducts__number">02</div>
                 <div class="topProducts__tag">
                   <span class="topProducts__tagIcon"><img data-src="./images/check.svg" width="177" height="46" alt="" class="lazyload"></span>
-                  <span class="topProducts__tagInner">事業内容について</span>
+                  <!-- <span class="topProducts__tagInner">事業内容について</span> -->
                 </div>
                 <h2 class="topProducts__heading js-topHeading">
-                  <span class="js-topHeadingInner">業務を</span><span class="js-topHeadingInner">変革</span><span class="js-topHeadingInner">する</span><br><span class="js-topHeadingInner">2つの</span><br class="onlySp"><span class="js-topHeadingInner">ソリューションを</span><span class="js-topHeadingInner">提供</span>
+                  <span class="js-topHeadingInner">About Us</span>
                 </h2>
                 <div class="topProducts__buttonarea">
                   <a href="/business/" class="top__button top__button--black">
@@ -516,7 +514,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <nav class="l-foot__nav">
       <div class="l-foot__nav-group">
         <a href="/about/" class="l-foot__nav-h pc">HOME</a>
-        <button type="button" class="l-foot__nav-h sp js-subnav-open">会社情報</button>
+        <button type="button" class="l-foot__nav-h sp js-subnav-open">HOME</button>
         <div class="l-foot__nav-box">
           <a href="/about/" class="l-foot__nav-link sp">会社情報 TOP</a>
           <a href="/about/philosophy/" class="l-foot__nav-link">経営理念</a>
@@ -526,7 +524,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="l-foot__nav-group">
         <a href="/business/" class="l-foot__nav-h pc">DASHBOARD</a>
-        <button type="button" class="l-foot__nav-h sp js-subnav-open">事業内容</button>
+        <button type="button" class="l-foot__nav-h sp js-subnav-open">DASHBOARD</button>
         <div class="l-foot__nav-box">
           <a href="/business/" class="l-foot__nav-link sp">事業内容 TOP</a>
           <em class="l-foot__nav-link">データオプティマイズソリューション</em>
