--- a/index.html
+++ b/index.html
@@ -158,13 +158,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <section class="l-topFv main-bg">
             <div class="topFv">
               <div class="topFv__inner">
+                <div class="auto">
+                  <div class="main-logo-bg"></div>
+                  <div>
+                    <div class="topFv__copy" id="js-topFvText">
+                      <span class="topFv__copyInner">Think Different & Cool.</span><span class="topFv__copyInner">Kewel Corporation is a technology company that contributes to solving social issues with the power of advanced AI technology. We provide one-stop solutions in the IT, telecommunications, semiconductors and healthcare segments for a better world.</span>
+                    </div>
+                  </div>
+                </iv>
                 <div class="topFv__container">
                   <h1 class="topFv__title onlyPc" id="js-topFvTitlePc"></h1>
                   <h1 class="topFv__title topFv__title01 onlySp" id="js-topFvTitleSp01"></h1>
                   <h1 class="topFv__title topFv__title02 onlySp" id="js-topFvTitleSp02"></h1>
-                  <div class="topFv__copy" id="js-topFvText">
-                    <span class="topFv__copyInner">Think Different & Cool.</span><span class="topFv__copyInner">Kewel Corporation is a technology company that contributes to solving social issues with the power of advanced AI technology. We provide one-stop solutions in the IT, telecommunications, semiconductors and healthcare segments for a better world.</span>
-                  </div>
                 </div>
                 <div class="topFv__scrollDown">
                   <div class="topFv__scrollDownInner">Scroll down</div>
