--- a/index.html
+++ b/index.html
@@ -81,16 +81,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <a href="/business/" class="l-gnav__link">DASHBOARD</a>
           </li>
           <li class="l-gnav__item">
-            <a href="/news/" class="l-gnav__link">ニュース</a>
+            <a href="/news/" class="l-gnav__link">COMPANY</a>
           </li>
           <li class="l-gnav__item">
-            <a href="https://www.opro.net/partnership/" class="l-gnav__link">パートナー</a>
+            <a href="https://www.opro.net/partnership/" class="l-gnav__link">OFFERING</a>
           </li>
           <li class="l-gnav__item">
-            <a href="https://spc.opro.net/hc/ja" target="_blank" class="l-gnav__link">サポート</a>
+            <a href="https://spc.opro.net/hc/ja" target="_blank" class="l-gnav__link"></a>
           </li>
           <li class="l-gnav__item">
-            <a href="https://event.opro.net/" target="_blank" class="l-gnav__link">イベント＆セミナー</a>
+            <a href="https://event.opro.net/" target="_blank" class="l-gnav__link">MSS</a>
+          </li>
+           <li class="l-gnav__item">
+            <a href="https://event.opro.net/" target="_blank" class="l-gnav__link">AI-AMD</a>
           </li>
           <li class="l-gnav__item">
             <a href="/ir/" class="l-gnav__link" data-device="pc">ABOUT US</a>
@@ -157,15 +160,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
           <section class="l-topFv main-bg">
             <div class="topFv">
-              <div class="topFv__inner">
-                <div class="auto">
+              <div class="auto">
                   <div class="main-logo-bg"></div>
                   <div>
                     <div class="topFv__copy" id="js-topFvText">
                       <span class="topFv__copyInner">Think Different & Cool.</span><span class="topFv__copyInner">Kewel Corporation is a technology company that contributes to solving social issues with the power of advanced AI technology. We provide one-stop solutions in the IT, telecommunications, semiconductors and healthcare segments for a better world.</span>
                     </div>
                   </div>
-                </iv>
+                </div>
+              <div class="topFv__inner">
+                
                 <div class="topFv__container">
                   <h1 class="topFv__title onlyPc" id="js-topFvTitlePc"></h1>
                   <h1 class="topFv__title topFv__title01 onlySp" id="js-topFvTitleSp01"></h1>
