--- a/index.html
+++ b/index.html
@@ -161,10 +161,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <section class="l-topFv main-bg">
             <div class="topFv">
               <div class="auto">
-                  <div class="main-logo-bg"></div>
+                  <div">
+                    <img src="./assets/img/common/4.avif" alt="">
+                  </div>
                   <div>
-                    <div class="topFv__copy" id="js-topFvText">
-                      <span class="topFv__copyInner">Think Different & Cool.</span><span class="topFv__copyInner">Kewel Corporation is a technology company that contributes to solving social issues with the power of advanced AI technology. We provide one-stop solutions in the IT, telecommunications, semiconductors and healthcare segments for a better world.</span>
+                    <div class="" id="">
+                      <span class="">Think Different & Cool.</span><span class="">Kewel Corporation is a technology company that contributes to solving social issues with the power of advanced AI technology. We provide one-stop solutions in the IT, telecommunications, semiconductors and healthcare segments for a better world.</span>
                     </div>
                   </div>
                 </div>
