--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </video>              
           </div>
           <section class="l-topFv main-bg">
-            <div class="topFv">
-              <div class="auto">
+            <div class="topFv ">
+              <div class="auto  w-70">
                   <div">
                     <img src="./assets/img/common/4.avif" alt="">
                   </div>
@@ -170,7 +170,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                   </div>
                 </div>
-              <div class="topFv__inner">
+              <div class="topFv__inner w-30">
                 
                 <div class="topFv__container">
                   <h1 class="topFv__title onlyPc" id="js-topFvTitlePc"></h1>
