--- a/index.html
+++ b/index.html
@@ -159,14 +159,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </video>              
           </div>
           <section class="l-topFv main-bg">
-            <div class="topFv ">
-              <div class="auto  w-70">
-                  <div">
-                    <img src="./assets/img/common/4.avif" alt="">
+            <div class="topFv flex">
+              <div class="auto  w-70 bg-white">
+                  <div>
+                    <img class="main-logo-bg" src="./assets/img/common/4.avif" alt="">
+                  </div>
+                  <div>
+                    <p class="intro-title">Think Different & Cool.</p>
                   </div>
                   <div>
                     <div class="" id="">
-                      <span class="">Think Different & Cool.</span><span class="">Kewel Corporation is a technology company that contributes to solving social issues with the power of advanced AI technology. We provide one-stop solutions in the IT, telecommunications, semiconductors and healthcare segments for a better world.</span>
+                     <span class="intro-text">Kewel Corporation is a technology company that contributes to solving social issues with the power of advanced AI technology. We provide one-stop solutions in the IT, telecommunications, semiconductors and healthcare segments for a better world.</span>
                     </div>
                   </div>
                 </div>
