--- a/index.html
+++ b/index.html
@@ -160,19 +160,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
           <section class="l-topFv main-bg">
             <div class="topFv flex">
-              <div class="auto  w-80 bg-white">
+              <div class="w-80 bg-white">
+                <div class="auto">
                   <div>
                     <img class="main-logo-bg" src="./assets/img/common/4.avif" alt="">
                   </div>
-                  <div>
+                  <div class="mt-20">
                     <p class="intro-title">Think Different & Cool.</p>
                   </div>
-                  <div>
+                  <div class="mt-20">
                     <div class="" id="">
                      <span class="intro-text">Kewel Corporation is a technology company that contributes to solving social issues with the power of advanced AI technology. We provide one-stop solutions in the IT, telecommunications, semiconductors and healthcare segments for a better world.</span>
                     </div>
                   </div>
                 </div>
+              </div>
               <div class="topFv__inner w-20">
                 
                 <div class="topFv__container">
@@ -247,13 +249,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div>
               <div class="topAbout__inner">
                 <div class="topAbout__item01" id="js-about01"></div>
-                <div class="topAbout__textBox">
+                <div class="topAbout__textBox img-group">
                   <div class="topAbout__text01 js-topAbout__text"><img data-src="./assets/img/common/overview1.png" class="lazyload" width="191" height="49" alt=""></div>
                   <div class="topAbout__text02 js-topAbout__text"><img data-src="./assets/img/common/overview2.png" class="lazyload" width="237" height="49" alt=""></div>
-                  <div class="topAbout__text03 js-topAbout__text">
-                    <img data-src="./images/topAbout_text03.svg" width="384" height="49" alt="" class="lazyload onlyPc">
-                    <img data-src="./images/topAbout_text03_sp.svg" width="145" height="35" alt="" class="lazyload onlySp">
-                  </div>
                   <div class="topAbout__text04 js-topAbout__text">
                     <img data-src="./assets/img/common/overview3.png" width="346" height="49" alt="" class="lazyload onlyPc">
                     <img data-src="./assets/img/common/overview3.png" width="161" height="35" alt="" class="lazyload onlySp">
@@ -560,7 +558,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <a href="https://event.opro.net/" target="_blank" class="l-foot__nav-h">イベント＆セミナー</a>
         <a href="/ir/" class="l-foot__nav-h">ABOUT US</a>
         <a href="https://www.opro.net/recruit/" target="_blank" class="l-foot__nav-h">CONTACT</a>
-        <a href="/contact/" class="l-foot__nav-h">お問い合わせ</a>
+        <a href="/contact/" class="l-foot__nav-h">FAQ</a>
       </div>
       <div class="l-foot__nav-group">
         <div class="l-foot__sub">
