--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                   <div class="topNews__date">2025年10月22日</div>
                   <div class="topNews__tag">プレスリリース</div>
                   <div class="topNews__text">
-                    椿 正義氏、執行役員就任による経営体制強化のお知らせ
+                    AI-Assisted Medical Diagnosis
                   </div>
                   <div class="topNews__icon">
                     <svg
@@ -396,7 +396,7 @@
                   <div class="topAbout__tag">
                     <span class="topAbout__tagIcon"
                       ><img
-                        data-src="./images/check.svg"
+                        src="./assets/img/common/1.avif"
                         class="lazyload"
                         width="177"
                         height="46"
