--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
               data-src="data.json"
             >
               <div class="topAbout">
-                <div class="topAbout__overview">
+                <div class="topAbout__overview bg-second">
                   <div class="topAbout__number">01</div>
                   <div class="topAbout__tag">
                     <span class="topAbout__tagIcon"
