--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                         height="46"
                         alt=""
                     /></span>
-                    <span class="topAbout__tagInner">私たちについて</span>
+                    <span class="topAbout__tagInner">OVERVIEW</span>
                   </div>
                   <h2 class="topAbout__heading js-topHeading onlyPc">
                     <span class="js-topHeadingInner">Company Overview</span>
