--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 >
               </li>
               <li class="l-gnav__item">
-                <a href="/contact/" class="l-gnav__contact-btn">お問い合わせ</a>
+                <a href="/contact/" class="l-gnav__contact-btn">FAQ</a>
               </li>
             </ul>
           </div>
@@ -405,7 +405,7 @@
                     <span class="topAbout__tagInner">OVERVIEW</span>
                   </div>
                   <h2 class="topAbout__heading js-topHeading onlyPc">
-                    <span class="js-topHeadingInner">Company Overview</span>
+                    <span class="js-topHeadingInner t-white">Company Overview</span>
                   </h2>
                   <h2 class="topAbout__heading js-topHeading onlySp">
                     <span class="js-topHeadingInner font-upper"
@@ -416,7 +416,7 @@
                     >
                   </h2>
                   <div class="topAbout__buttonarea">
-                    <a href="/about/" class="top__button">
+                    <a href="/about/" class="top__button t-white">
                       COMPANY OVERVIEW
                       <span>
                         <svg
@@ -988,7 +988,7 @@
                     ><span class="js-topHeadingInner">関わらず</span><br /><span
                       class="js-topHeadingInner"
                       >お気軽に</span
-                    ><span class="js-topHeadingInner">お問い合わせ</span
+                    ><span class="js-topHeadingInner">FAQ</span
                     ><span class="js-topHeadingInner">ください</span>
                     <a href="https://www.opro.net/contact/" class="top__button">
                       お問い合わせフォーム
