--- a/index.html
+++ b/index.html
@@ -450,13 +450,12 @@
                   <div class="topAbout__item01" id="js-about01"></div>
                   <div class="topAbout__textBox img-group">
                     <div class="topAbout__text01 js-topAbout__text">
-                      <img
-                        data-src="./assets/img/common/overview1.png"
-                        class="lazyload"
+                      <p
+                        class="lazyload sub-over"
                         width="191"
                         height="49"
                         alt=""
-                      />
+                      >Established<span class="sub-data">April 3,2025</span></p>
                     </div>
                     <div class="topAbout__text02 js-topAbout__text">
                       <img
