--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                   <div class="topAbout__buttonarea">
                     <a href="/about/" class="top__button t-white">
                       COMPANY OVERVIEW
-                      <span>
+                      <span class="t-white">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
                           width="34"
@@ -455,7 +455,7 @@
                         width="191"
                         height="49"
                         alt=""
-                      >Established<span class="sub-data">April 3,2025</span></p>
+                      >Established<br><span class="sub-data">April 3,2025</span></p>
                     </div>
                     <div class="topAbout__text02 js-topAbout__text">
                       <img
