--- a/index.html
+++ b/index.html
@@ -449,22 +449,21 @@
                 <div class="topAbout__inner">
                   <div class="topAbout__item01" id="js-about01"></div>
                   <div class="topAbout__textBox img-group">
-                    <div class="topAbout__text01 js-topAbout__text">
+                    <div class="topAbout__text01 js-topAbout__text flex">
                       <p
-                        class="lazyload sub-over"
+                        class="lazyload sub-over auto"
                         width="191"
                         height="49"
                         alt=""
                       >Established<br><span class="sub-data">April 3,2025</span></p>
                     </div>
                     <div class="topAbout__text02 js-topAbout__text">
-                      <img
-                        data-src="./assets/img/common/overview2.png"
-                        class="lazyload"
-                        width="237"
+                      <p
+                        class="lazyload sub-over auto"
+                        width="191"
                         height="49"
                         alt=""
-                      />
+                      >Headquarters<br><span class="sub-data">Shinagawa-ku, Tokyo</span></p>
                     </div>
                     <div class="topAbout__text04 js-topAbout__text">
                       <img
